# box_buddy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  README.MD  README.md  dev_general.html  dev_models.html  docker-compose.yml  index.html  justfile  manage.py  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: mkdocs.yml
app/: manage.py  mkdocs.yml
app/box_buddy/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/box_buddy/templatetags/: allauth.py
app/core/: urls.py  views.py
app/templates/: base.html  navbar.html
app/templates/allauth/elements/: form.html  provider.html  provider_list.html
app/templates/allauth/layouts/: entrance.html  manage.html
app/templates/pages/: about.html
app/users/: adapters.py  admin.py  models.py  views.py
app/users/migrations/: 0001_initial.py
app/users/tests/: factories.py  test_managers.py  test_tasks.py
box_buddy/: asgi.py  celery.py  context_processors.py  settings.py  urls.py  util.py  wsgi.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/management/commands/: delete_fake_data.py  generate_fake_data.py
core/migrations/: 0001_initial.py  0002_alter_box_options.py  0003_alter_location_name_box_unique_box_file_unique_file_and_more.py
core/templates/detail/: box_detail.html  location_detail.html
core/templates/forms/: obj_create_edit.html
core/templates/list/: box_list.html
core/tests/: test_views.py
docker/django/: Dockerfile  entrypoint.sh  run-beats.sh  run-flower.sh  run-server.sh  run-worker.sh
docker/traefik/: routes.yml  traefik.yml
docs/: dev_general.md  dev_models.md  index.md
getting_started/: configuration.html  installation.html  usage.html
templates/: base.html  navbar.html  sidebar.html
templates/allauth/layouts/: entrance.html  manage.html
templates/pages/: about.html  home.html  location_edit.html  location_list.html  location_update.html  settings.html
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py  0002_remove_user_timezone.py
