[project]
name = "box_buddy"
version = "0.0.1"
description = ""
authors = [
    {name = "Ian Day", email = "ian@ianday.me"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
  "Django (>=5.1.6,<5.2)",

  "django-environ (>=0.12.0,<0.13)",
  "django-extensions (>=3.2.3,<3.3)",
  "django-model-utils (==5.0.0)",  # https://github.com/jazzband/django-model-utils
  "django-allauth[socialaccount,mfa,openid] (==65.5.0)", # https://github.com/pennersr/django-allauth 
  "django-crispy-forms (==2.3)",  # https://github.com/django-crispy-forms/django-crispy-forms
  "crispy-bootstrap5 (==2024.10)",  # https://github.com/django-crispy-forms/crispy-bootstrap5
  'django_bootstrap5 (==25.1)', #https://github.com/zostera/django-bootstrap5/tree/main
  "django-csp (==3.8)", #https://github.com/mozilla/django-csp?tab=readme-ov-file
  "django-redis (==5.4.0)",  # https://github.com/jazzband/django-redis
  "gunicorn (>=23.0.0,<23.1)",
  "mkdocs  (>=1.6,<1.7)",
  "mkdocs-autorefs (>=1.2,<1.3)",
  "mkdocs-get-deps (>=0.2,<0.3)",
  "mkdocs-glightbox (>=0.4,<0.5)",
  "mkdocs-material (>=9.5,<9.6)",
  "mkdocs-material-extensions (>=1.3,<1.4)",
  "mkdocstrings[python] (>=0.26,<0.27)",
  "psycopg2-binary (>=2.9.10,<2.10)",
  "whitenoise (>=6.9.0,<6.10)",
  "Werkzeug (>=3.1,<3.2)",
  "python-slugify (==8.0.4)",  # https://github.com/un33k/python-slugify
  "Pillow (==11.1.0)",  # https://github.com/python-pillow/Pillow
  "argon2-cffi (==23.1.0)",  # https://github.com/hynek/argon2_cffi
  "redis (==5.2.1)",  # https://github.com/redis/redis-py
  "hiredis (==3.1.0)",  # https://github.com/redis/hiredis-py
  "celery (==5.4.0)",  # pyup: < 6.0  # https://github.com/celery/celery
  "django-celery-beat (==2.7.0)",  # https://github.com/celery/django-celery-beat
  "flower (==2.0.1)",  # https://github.com/mher/flower


]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"





[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
ruff = "^0.0.263"
factory-boy = "==3.3.2"  # https://github.com/FactoryBoy/factory_boy
django-debug-toolbar = "==5.0.1"  # https://github.com/jazzband/django-debug-toolbar
django-extensions = "==3.2.3"  # https://github.com/django-extensions/django-extensions
django-coverage-plugin = "==3.1.0"  # https://github.com/nedbat/django_coverage_plugin
pytest-django = "==4.10.0"  # https://github.com/pytest-dev/pytest-django
watchfiles = "==1.0.4"  # https://github.com/samuelcolvin/watchfiles




# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["box_buddy/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
  "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true
